# brainsim

./: .gitignore  LICENCE  README.rst  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
scripts/: biot_brain_test.py  biot_square.py  fenics_function_to_image.py  generate_mesh.py  image_to_fenics_function.py  image_to_mesh_function.py  manufactured_soln2.py  overlay_surface_on_nifti.py  pipe_example.py  preprocess_surface.py
src/brainsim/: __init__.py  biot_system.py  image_tools.py  mesh_tools.py  mf_tools.py  vtk_utils.py
src/brainsim/pipeline/: __init__.py  mesh_pipes.py  pipe.py
tests/: test_image_interpolator.py  test_vtk_utils.py
