

[metadata]
name = brainsim
version = 0.1.0
license= LGPLv3

description= Scripts for CSF flow simulations
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
classifiers=
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   scipy
   matplotlib
   numba
   tqdm
   pandas
   pygmsh
   meshio
   h5py
   nibabel
   pyvista
   

[options.packages.find]
where=src

[bdist_wheel]
universal = 1
